--- a/gym.html
+++ b/gym.html
@@ -97,8 +97,8 @@
 
     <div class="solution_container">
       <h1> <span class="underline_black">SOLUTION</span></h1>
-      <p>Gymseeker makes the process of finding a gym easier by streamlining the research and selection phase based on users'
-        needs. Users can search for gyms based on location, view gym's profile, and purchase/manage gym memberships.   <a href="https://invis.io/TUEP5Y8D9" target="_blank"><b> View the clickable prototypes here.</b> </a> </p>
+      <p>Gymseeker makes the process of finding a gym easier by streamlining the research and selection phase based on the users'
+        needs. Users can search for gyms based on location, and view gym's profile before making a commitment to purchasing a membership.  <a href="https://invis.io/TUEP5Y8D9" target="_blank"><b> View the clickable prototypes here.</b> </a> </p>
     </div>
   </section>
 
@@ -107,8 +107,8 @@
       <h1> WORKING OUT ON THE RESEARCH </h1> <hr>
 
       <div class="survey_findings">
-        <b> Survey Findings </b>
-        <p> I initiated my research by crafting a user survey in order to find out users' goals and pain points.
+
+        <p>  <strong> Survey findings: </strong>I initiated my research by crafting a 15 questions user survey in order to find out users' goals and pain points.
           Through this survey, I needed to learn the following: </p>
 
         <div class="highlights">
@@ -121,8 +121,8 @@
           </ul>
         </div>
 
-        <p> The survey was shared through social media, mutual friends, and people who regularly attend a local gym.
-           The survey was completed with 41 respondents. <a href="https://docs.google.com/spreadsheets/d/1lfVgE3ZHnB_b_OIq3hhmVKv0sYLDmA1K7bA8-b5aMT4/edit?usp=sharing" target="_blank">
+        <p> The survey was shared through social media, mutual friends, and people who regularly attend a local gym
+           and was completed with 41 respondents. <a href="https://docs.google.com/spreadsheets/d/1lfVgE3ZHnB_b_OIq3hhmVKv0sYLDmA1K7bA8-b5aMT4/edit?usp=sharing" target="_blank">
            <b>Click here to view the survey results. </b> </a> </p>
 
 
@@ -144,8 +144,8 @@
            them with essential gym elements such as price, location, and amenities.
       </div>
 
-      <div class="personas"> <b>Personas </b>
-        <p>To gain a better understanding of what specific features were desired, I complied my research from both the survey and in-person
+      <div class="personas">
+        <p><strong>Personas: </strong>To gain a better understanding of what specific features were desired, I complied my research from both the survey and in-person
         interview to come with three different personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer. These personas will guide me to
         design an intuitive flow for Gymseeker. </p>
         <img src="images/gymseeker/Mark.png">
@@ -160,8 +160,8 @@
   <div class="design_container">
     <h1> RUNNING THROUGH THE DESIGN CHOICES </h1><hr>
 
-    <div class="user_flow"> <b>Information Architecture</b>
-      <p> After getting a better insight of my users, I could move foward on user stories and user flows.
+    <div class="user_flow">
+      <p><strong>Information Architecture:</strong> After getting a better insight of my users, I could move foward on user stories and user flows.
       Basing off from the research, I created user stories and made four user flows that are essential to crafting the important features and screens for
     Gymseeker. <a href="https://docs.google.com/spreadsheets/d/123lRp0UdWpR_rVzesVuoIFh29WfpIlTxFjVp7_xMhrc/edit?usp=sharing" target="_blank">
     <b> Click here to view the user stories. </b> </a> </p>
@@ -169,8 +169,8 @@
       <img src="images/gymseeker/user_flow.png">
     </div>
 
-    <div class="branding"> <b>Branding and Typography</b>
-      <p>Since the goal is to inspire users to achieve their fitness goals, Gymseeker
+    <div class="branding">
+      <p><strong>Creating the Brand Identity: </strong>Since the goal is to inspire users to achieve their fitness goals, Gymseeker
         needed a color palette and logo that would evoke a feeling of energy and
         motivation.
 
@@ -181,13 +181,14 @@
 
     </div>
 
-    <div class="low"> <b> Low-Fidelity Wireframes </b>
-      <p>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and transfer it to clickable
+    <div class="low">
+      <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and transfer it to clickable
         prototypes in Invision. I tested the prototyes in-person with a few friends and some people from my local gym. Some minor feedback includes making the filter button
         functional or changing the layout of certain elements. Taking in consideration of the feedback, I moved forward to creating high-fidelity wireframes. These
       are some of the initial sketches: </p>
 
       <img src="images/gymseeker/low.png">
+
 
   </div>
 </section>
@@ -195,7 +196,7 @@
 <section class="usability">
   <div class="usability_container">
     <h1>USABILITY TESTING </h1> <hr>
-    <p> After multiple iterations from the low-fidelity mockups, I conducted a usability test with the high-fideliy clickable prototypes.
+    <p> After multiple iterations from the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
       I presented the application to four different testers.  <b>These are three separate tasks I had users complete:</b> </p>
 
     <div class="highlights">
@@ -208,7 +209,7 @@
       </ul>
     </div>
 
-    <p> After usability testing, my goal was to analyze the feedback and uncover major pain points, if any.
+    <p> <strong>Results:</strong> After usability testing, my goal was to analyze the feedback and uncover major pain points, if any.
       The conduction yielded positive interaction with some minor feedback and user errors: </p>
 
       <div class="highlights">
@@ -238,6 +239,10 @@
     commenting that the visual is similar to a list. While this may be true, the data indicates that majority of testers understood the flow to purchasing a membership
       from an alternative view.</p>
 
+      <div class="prototype">
+        <iframe width="438" height="930" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
+      </div>
+
   </div>
 </section>
 
@@ -259,9 +264,9 @@
       making a commitment to purchasing a membership.  </p>
 
     <p> For this application, I delved deeper in the user testing process and made many iterations based on
-      feedback. In future development of the current product, I would consider an additional feature that allows users to
+      feedback. In future development of the current product and due to time constraints, I would consider an additional feature that allows users to
     sort through the different types of gym - Yoga center, dance center, athlethic clubs, etc. This would provide users with a
-  comprehensive direction to filter through their fitness goals. </p>
+    comprehensive direction to filter through their fitness goals. </p>
 
     </div>
 
