--- a/ridestarter.html
+++ b/ridestarter.html
@@ -66,6 +66,7 @@
 </section>
 
 <section class="summary_deliver">
+  <h1> <span class="underline_black">DELIVERABLES</span></h1>
   <h4 class="deliver">Duration<hr>
     <p>2 Months </p>
   </h4>
@@ -100,8 +101,8 @@
   <div class="research_container">
     <h1> RESEARCHING THE CHALLENGES  </h1><hr>
 
-    <div class="survey_findings"> <b>Survey Findings</b>
-      <p> At this initial stage, it was important to gain a better understanding of users' behavior of
+    <div class="survey_findings">
+      <p><strong>Survey Findings:</strong> At this initial stage, it was important to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
       who have made donations, created fundraiser projects, participated in charity bike ride and also users
       who have neither fundraised or donated.  <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
@@ -143,8 +144,8 @@
 
     </div>
 
-    <div class="competitive_analysis"> <b> Competitive Analysis </b>
-      <p> I analyzed four different crowdfunding companies in order to find out more about how
+    <div class="competitive_analysis">
+      <p><strong> Competitive Analysis: </strong> I analyzed four different crowdfunding companies in order to find out more about how
         they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
         features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
         it was important that the application contains features unique to charity bike rides as well as some of the
@@ -154,8 +155,8 @@
       <img src="images/ridestarter/competitive_analysis.png" >
     </div>
 
-    <div class="personas"> <b>Personas </b>
-      <p>After conducting user interviews and compiling the survey, I created three
+    <div class="personas">
+      <p><strong>Personas: </strong>After conducting user interviews and compiling the survey, I created three
         user personas to reflect both the fundraiser and donor perspective. My goal was to develop
       empathy for the users and how they will interact with the application. </p>
       <img src="images/ridestarter/luke.png">
@@ -170,8 +171,8 @@
     <div class="design_container">
       <h1> RIDING THROUGH THE DESIGN CHOICES </h1><hr>
 
-      <div class="user_flow"> <b>User Flow</b>
-        <p>Based on the user research, I finalized four user stories that I believe
+      <div class="user_flow">
+        <p><strong>User Flow:</strong> Based on the user research, I finalized four user stories that I believe
           are important for users to navigate through their goals in Ridestarter:
           Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign. This detaied information
         architecture serves as a template for the creation of the site. <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
@@ -180,8 +181,8 @@
         <img src="images/ridestarter/user_flow.png">
       </div>
 
-      <div class="branding"> <b>Branding and Typography</b>
-        <p> With Ridestarter being a crowdfunding application, eliciting trust and emotion are the
+      <div class="branding">
+        <p> <strong>Branding and Typography:</strong> With Ridestarter being a crowdfunding application, eliciting trust and emotion are the
           most important facet in getting users to use the site. The color palette was comprised mainly of the color green. Green was used as the primary color for
           Ridestarter because not only green associates with money flow, but also promotes
           a love for nature and foliages, which are all presented during a rider's journey. </p>
@@ -193,8 +194,8 @@
         <img src="images/ridestarter/ridestarter_branding.png">
       </div>
 
-      <div class="low_mockups"> <b>Low-Fidelity Wireframes</b>
-        <p>In order to show potential users how the application is supposed to function and be built,
+      <div class="low_mockups">
+        <p><strong>Low-Fidelity Wireframes:</strong> In order to show potential users how the application is supposed to function and be built,
            I designed the low-fidelity wireframes in Balsamiq based from the user stories. It was also important
          to remember to design from both the donators and fundraisers' experience. Given that mind, I created
          wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
@@ -208,8 +209,8 @@
 <section class="implementation">
   <div class="implement_container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </span> <hr>
-    <div class="user_testing"> <b>Usability Testing</b>
-      <p> User testing was important to gather either design feedback or any errors that user experienced.
+    <div class="user_testing">
+      <p> <strong>Usability Testing:</strong> User testing was important to gather either design feedback or any errors that user experienced.
         For this process, I conducted both a contextual interview on four different users and an unmoderately usability testing on usertesting.com
          to get feedback on the clickable prototypes that I created in InVision. These are some of the guiding questions that I asked
         during the testing as they navigate through the website: </p>
@@ -258,8 +259,8 @@
 
   </div>
 
-  <div class="final_container"> <b>High-Fidelity Prototypes </b>
-    <p> With the insights gained from user research and usability testing, Ridestarter was solidified with
+  <div class="final_container">
+    <p><strong>High-Fidelity Prototypes: </strong> With the insights gained from user research and usability testing, Ridestarter was solidified with
       multiple sought out iterations, transforming it into high-fidelity prototypes. <a href="https://invis.io/Z2D6DKKTY" target="_blank">
         You can check out Ridestarter's interactive prototype here. </a></p>
     <img src="images/ridestarter/ridestarter_high.jpg">
