--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   <div class="about_container">
     <h1> ABOUT </h1> <hr id="hr_about"> </hr>
     <div class="about_left">
-      <h2>Hello! My name is Ekkalux or Lux for short, committed to uncovering people's stories through
-        the crafting of intuitive design solutions . . . </h2>
+      <h2>Hello! My name is Ekkalux or Lux, committed to <b>uncovering people's stories</b> through
+        the crafting of <b>intuitive design solutions</b>  </h2>
 
       <p> Growing up, I have always had a deep appreciation for how the human mind works.
         Asking questions like what makes us tick and why do we do things the way we do, I was fascinated by the
@@ -134,7 +134,7 @@
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
          plan, and deliver effective design solutions.
 
-         <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
+         <p> <b>I am here to make the world a better place!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and entertainment, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not designing,
          I enjoy hiking, traveling, hitting my personal records at the gym, having great conversations, and keeping up with the
