--- a/gym.html
+++ b/gym.html
@@ -146,7 +146,7 @@
 
       <div class="personas">
         <p><strong>Personas: </strong>To gain a better understanding of what specific features were desired, I complied my research from both the survey and in-person
-        interview to come with three different personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer. These personas will guide me to
+        interview to create three different user personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer. These personas will guide me to
         design an intuitive flow for Gymseeker. </p>
         <img src="images/gymseeker/Mark.png">
         <img src="images/gymseeker/Philip.png">
@@ -182,12 +182,13 @@
     </div>
 
     <div class="low">
-      <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and transfer it to clickable
-        prototypes in Invision. I tested the prototyes in-person with a few friends and some people from my local gym. Some minor feedback includes making the filter button
+      <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and then transfered it to clickable
+        prototypes with InVision. I tested the prototyes in-person with a few friends and some people from my local gym. Some minor feedback includes making the filter button
         functional or changing the layout of certain elements. Taking in consideration of the feedback, I moved forward to creating high-fidelity wireframes. These
       are some of the initial sketches: </p>
 
       <img src="images/gymseeker/low.png">
+    </div>
 
 
   </div>
@@ -240,7 +241,7 @@
       from an alternative view.</p>
 
       <div class="prototype">
-        <iframe width="438" height="930" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
+        <iframe width="438" height="930" class="frame" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
       </div>
 
   </div>
