--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   <div class="about_container">
     <h1> ABOUT </h1> <hr id="hr_about"> </hr>
     <div class="about_left">
-      <h2>Hello! My name is Ekkalux or Lux, committed to <b>uncovering people's stories</b> through
-        the crafting of <b>intuitive design solutions</b>  </h2>
+      <h2> <b>Hello! My name is Ekkalux or Lux, committed to uncovering people's stories through
+        the crafting of intuitive design solutions</b>  </h2>
 
       <p> Growing up, I have always had a deep appreciation for how the human mind works.
         Asking questions like what makes us tick and why do we do things the way we do, I was fascinated by the
