--- a/simplebox.html
+++ b/simplebox.html
@@ -176,12 +176,17 @@
   <img src="images/simplebox/simplebox_style_guide.png">
 </section>
 
+<section class="lofi">
+  <h1>LOW/MEDIUM-FIDELITY WIREFRAMES</h1> <hr>
+  <p> Using the user flow as a guide, I created low-fidelity and medium-fidelity wireframes with Balsamiq and Sketch, respectively. These are some of the intial sketches: </p>
+    <img src="images/simplebox/simplebox_low.png">
+</section>
+
 
 <section class="low_fidelity">
   <h1>USABILITY TESTING </h1><hr>
-  <p>After defining the brand identity for simpleBox, I created low-fidelity/medium
-    fidelity wireframes with balsamiq and photoshop to test on usertesting.com and
-    in-person to see whether the product was user friendly to the users. These are
+  <p>To evaluate the product's user experience and identify flaws, I conducted usability testings on usertesting.com and
+    in-person to see whether the product was user friendly to users. These are
     the main questions that I asked. </p>
   <div class="highlights">
     <ul>
@@ -196,9 +201,9 @@
   <div class="highlights">
     <h1>Insights from usability testing </h1>
     <ul>
-      <li> Based from the in-person testing with some of my colleagues, users had a positive response to the application and were able to navigate through
+      <li> <b>In-Person Testing:</b> Users had a positive response to the application and were able to navigate through
         the site smoothly. They also liked the simplicity of the site and the logo.  </li>
-      <li> To gain more insights about the application, I also conduced an unmoderated usability test on Peek. Based from the
+      <li> <b>Unmoderated User Testing:</b> To gain more insights about the application, I conducted an unmoderated usability test on Peek. Based from the
         test, the user was able to quickly identify simpleBox's functionality, referring to similiarites to other applications such as dropbox, where you can store
         and save documents. Since the test was unmoderated, I wasn't able to follow up with questions or answer some of the concerns that
         the tester had. Although the user might not have known that this is a medium-fidelity prototype, she was confused about the color scheme of
@@ -209,15 +214,15 @@
 
 
   <img src="images/simplebox/user_testing_video.png">
-  <img src="images/simplebox/simplebox_low.png">
+
 
 </section>
 
 <section class="high_fidelity">
   <h1> HIGH-FIDELITY PROTOTYPES </h1><hr>
   <p>After going through user testing for the low/medium prototypes and making iteration based on feedback, I used
-    Sketch to create high-fidelity prototypes. Then I made another clickable prototypes on InVision and asked a few more users to
-    navigate through the prototypes and provide feedback. I also conducted another unmoderated user test. <a href="http://www.usertesting.com/v/f0ad361e-6fcd-4a05-8e1c-5c977715689e?encrypted_video_handle=tHdsGv9x0MymeSOqYu_RvQ&shared=M2VgP9nf">
+    Sketch to create high-fidelity prototypes. Then I made another clickable prototypes with InVision and asked a few more users to
+    navigate through the prototypes and provide feedback. I conducted another unmoderated user test. <a href="http://www.usertesting.com/v/f0ad361e-6fcd-4a05-8e1c-5c977715689e?encrypted_video_handle=tHdsGv9x0MymeSOqYu_RvQ&shared=M2VgP9nf">
     You can view the full video here.</a> Below are the discussion questions
     I asked during the usability testing. </p>
 
@@ -231,7 +236,7 @@
     </ul>
   </div>
 
-  <p>Overall, users thought that the experience was pleasing and that the application is presentable in a simplified, yet professional design.
+  <p><b>Results: </b>Overall, users thought that the experience was pleasing and that the application is presentable in a simplified, yet professional design.
   The responses were more convincing when testing with the high-fidelity wireframes because users were able easily visualize the final presentation of the platform.
   In addition, when asked to sign in and create either a note, image, or link, users had no trouble taking that action and were able to do so without any frustrations.</p>
 
@@ -250,42 +255,47 @@
   <img src="images/simplebox/preference_test.png">
 </section>
 
-<section class="final_product">
-  <h1> FINAL PRODUCT </h1><hr>
+<section class="html">
+  <h1> <b>Front-End Development</b> </h1> <hr>
+  <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
+    Because Simplebox is targeted for users to access through different devices, I designed the
+    homepage as mobile-first to ensure its responsiveness across different outlets. <a href="https://ekkalux.github.io/simpleBox/" target="_blank"> You can view the homepage development here </a> </p>
+
+  <img src="images/simplebox/code.png">
+
+</section>
+
+<section class="visual">
+  <h1> VISUAL DESIGN </h1><hr>
+
+    <img src="images/simplebox/dashboard_annotating.png">
+    <img src="images/simplebox/annotating_account.png">
+</section>
+
+
+<section class="final">
   <div class="conclusion">
-    <p>After researching, user testing, and designing through Balsamiq, Illustrator, and
+    <div class="conclusion_container">
+    <h1><span class="underline_black"> CONCLUSION</span></h1>
+    <p> After researching, user testing, and designing through Balsamiq, Illustrator, and
       Photoshop/Sketch, the final product was completed with harmoniously-working colors and
       design elements that achieve simpleBox’s goal in creating a friendly user experience in
       collecting and sharing contents. </p>
 
-    <p>From simpleBox, I learned the importance of relying on data and interviews to create an intuitive product for the end-user.
+    <p> From simpleBox, I learned the importance of relying on data and interviews to create an intuitive product for the end-user.
       Designing is more than just creating visually appealing elements. It’s easy to detach myself from designing from the user’s experience, but something that is designed from my own satisfactory might not be intuitive to other users.
       In addition, understanding the code methods for mobile-first development was slightly challenging, but worth it in today’s advancement in creating good user experience.
       It’s important to keep in mind that many users today use their mobile devices to browse through different applications on the net.
       <a href="https://invis.io/8PC2WA7AH"> Click here to view the interactive prototype </a> </p>
 
-
-    <img src="images/simplebox/dashboard_annotating.png">
-    <img src="images/simplebox/annotating_account.png">
-
-  </div>
-
-  <div class="html">
-    <h1> <b>Front-End Development</b> </h1> <hr>
-    <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
-      Because Simplebox is targeted for users to access through different devices, I designed the
-      homepage as mobile-first to ensure its responsiveness across different outlets. <a href="https://ekkalux.github.io/simpleBox/" target="_blank"> You can view the homepage development here </a> </p>
-
-    <img src="images/simplebox/code.png">
+    </div>
 
     <div class="arrow_up_container">
       <i class="fa fa-angle-double-up fa-4x" style="color:black"></i>
       <h1> Back to top </h1>
     </div>
+
   </div>
-
-</section>
-
 
 <section class="footer">
   <div class="left_footer">
