--- a/simplebox.html
+++ b/simplebox.html
@@ -183,7 +183,7 @@
 </section>
 
 
-<section class="low_fidelity">
+<section class="user_testing">
   <h1>USABILITY TESTING </h1><hr>
   <p>To evaluate the product's user experience and identify flaws, I conducted usability testings on usertesting.com and
     in-person to see whether the product was user friendly to users. These are
