--- a/gym.html
+++ b/gym.html
@@ -148,9 +148,9 @@
         <p><strong>Personas: </strong>To gain a better understanding of what specific features were desired, I complied my research from both the survey and in-person
         interview to create three different user personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer. These personas will guide me to
         design an intuitive flow for Gymseeker. </p>
-        <img src="images/gymseeker/Mark.png">
-        <img src="images/gymseeker/Philip.png">
-        <img src="images/gymseeker/Angela.png">
+        <img src="images/gymseeker/Mark.png" class="enlarge">
+        <img src="images/gymseeker/Philip.png" class="enlarge">
+        <img src="images/gymseeker/Angela.png"class="enlarge">
       </div>
 
     </div>
@@ -278,6 +278,17 @@
 
   </div>
 
+</section>
+
+
+<section class="more">
+  <div class="left_project">
+    <img src="images/simplebox_cover.jpg"> </img>
+  </div>
+
+  <div class="right_project">
+    <img src="images/ridestarter_laptop.jpg">
+  </div>
 </section>
 
 </body>
