--- a/gym.html
+++ b/gym.html
@@ -23,6 +23,7 @@
   gtag('config', 'UA-108806471-1');
 </script>
 
+
 </head>
 
 <body>
@@ -280,28 +281,24 @@
 
 </section>
 
-
-<section class="more">
-  <div class="left_project">
-    <img src="images/simplebox_cover.jpg"> </img>
-  </div>
-
-  <div class="right_project">
-    <img src="images/ridestarter_laptop.jpg">
-  </div>
-</section>
-
 </body>
 
-<section class="footer">
-  <div class="left_footer">
-     © 2017 Ekkalux Nguyen | All Rights Reserved.
-  </div>
+<section class="contact">
+  <h1> CONTACT </h1> <hr class="contact_hr">
+  <div class="contact_container">
+    <p> I love to connect and meet new people. Feel free to get in touch with me if you have
+      opportunities for projects or open positions! I am also open to relocation. </p>
+    <div class="icons">
+        <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
+    </div>
 
-  <div class="right_footer">
-    <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-official fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin-square fa-2x"></i></a>
-    <a href="https://www.behance.net/ekkaluxnguyen"><i class="fa fa-behance-square fa-2x"></i></a>
+    <div class="bottom">
+      <p>© 2017 Ekkalux Nguyen | Designed and Developed by Ekkalux Nguyen </p>
+    </div>
+
   </div>
 </section>
 
