--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
-        <p> A SaaS web application that allows users to collect information and store it in a centralized location.
-
-        </tbody></p>
+        <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_projects">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
@@ -147,29 +145,25 @@
 </section>
 
 <section class="contact">
-  <h1> CONTACT </h1> <hr>
+  <h1> CONTACT </h1> <hr class="contact_hr">
   <div class="contact_container">
     <p> I love to connect and meet new people. Feel free to get in touch with me if you have
       opportunities for projects or open positions! I am also open to relocation. </p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button">Get in touch</button></a>
+
+    <div class="icons">
+        <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class=" fa fa-github fa-lg"></i></a>
+    </div>
+
+    <div class="bottom">
+      <p>© 2017 Ekkalux Nguyen | Designed and Developed by Ekkalux Nguyen </p>
+    </div>
+
   </div>
 </section>
 
 </body>
-
-
-<section class="footer">
-  <div class="left_footer">
-     © 2017 Ekkalux Nguyen | All Rights Reserved.
-  </div>
-
-  <div class="right_footer">
-    <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-official fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin-square fa-2x"></i></a>
-    <a href="https://www.behance.net/ekkaluxnguyen"><i class="fa fa-behance-square fa-2x"></i></a>
-  </div>
-</section>
-
-
 
 </html>
