--- a/ridestarter.html
+++ b/ridestarter.html
@@ -297,14 +297,22 @@
 
 </section>
 
-<section class="footer">
-  <div class="left_footer">
-    2017 Ekkalux Nguyen | All Rights Reserved.
-  </div>
+<section class="contact">
+  <h1> CONTACT </h1> <hr class="contact_hr">
+  <div class="contact_container">
+    <p> I love to connect and meet new people. Feel free to get in touch with me if you have
+      opportunities for projects or open positions! I am also open to relocation. </p>
 
-  <div class="right_footer">
-    <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-official fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin-square fa-2x"></i></a>
-    <a href="https://www.behance.net/ekkaluxnguyen"><i class="fa fa-behance-square fa-2x"></i></a>
+    <div class="icons">
+        <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class=" fa fa-github fa-lg"></i></a>
+    </div>
+
+    <div class="bottom">
+      <p>© 2017 Ekkalux Nguyen | Designed and Developed by Ekkalux Nguyen </p>
+    </div>
+
   </div>
 </section>
