--- a/gym.html
+++ b/gym.html
@@ -220,12 +220,13 @@
           <li> <b> Option to view weekly schedule: </b> One of the users wanted to look at the weekly schedule, but couldn't find an option to do so. I created a call to action in the gym's profile  </li>
           <li> <b> Map view over list view </b> I noticed that users tend to stay on the map view and didn't notice the list view option until otherwise mentioned. To fix this, I made both the map and list view options bigger and tested
           again with different users. </li>
+          <li> <b> Unmoderated remote testing: </b> Buying a membership is easy, quick, and intuititve. Participant said "takes the fuss out of trying to find a gym, anything on their website, or calling anyone" <a href="http://www.usertesting.com/v/a0f49f57-2259-4f8b-974a-d9839e50ca66?encrypted_video_handle=Eknu2wIOpzipDgTimemuJA&shared=pHvYGqsZ" target="_blank"> View the video here </a></li>
         </ul>
       </div>
 
       <img src="images/gymseeker/map_user_test.png">
 
-      <p>To test out my assumption that users have no trouble navigating to the list view and purchasing a membership,
+      <p><strong>Navigation Test:</strong> To test out my assumption that users have no trouble navigating to the list view and purchasing a membership,
       I created a navigation test on usabilityhub.com and was able to generate more than 25 responses. <a href="https://usabilityhub.com/tests/8383bdc11445/results/ac9b60656eab" target="_blank"> <b>Click here to view the test results.</b> </a> </p>
 
       <div class="highlights">
@@ -236,14 +237,11 @@
 
       <img src="images/gymseeker/heatmap.png">
 
-      <p> The results indicated that users were able to successfully navigate to a different view and purchase a membership. This shows
+      <p> <strong> Navigation Test Results:</strong> The results indicated that users were able to successfully navigate to a different view and purchase a membership. This shows
       that the hiearchy is intuitively placed. What's interesting was that a few testers thought that the navigation icon is the list view,
     commenting that the visual is similar to a list. While this may be true, the data indicates that majority of testers understood the flow to purchasing a membership
       from an alternative view.</p>
 
-      <div class="prototype">
-        <iframe width="438" height="930" class="frame" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
-      </div>
 
   </div>
 </section>
@@ -253,6 +251,11 @@
     <h1>VISUAL DESIGN</h1> <hr>
     <img src="images/gymseeker/visual.png">
   </div>
+
+  <div class="prototype">
+    <iframe width="438" height="930" class="frame" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
+  </div>
+
 </section>
 
 <section class="final">
