--- a/gym.html
+++ b/gym.html
@@ -105,7 +105,7 @@
 
   <section class="research">
     <div class="research_container">
-      <h1> WORKING OUT ON THE RESEARCH </h1> <hr>
+      <h1> WORKING OUT ON THE RESEARCH </h1>
 
       <div class="survey_findings">
 
@@ -159,7 +159,7 @@
 
 <section class="design_choices">
   <div class="design_container">
-    <h1> RUNNING THROUGH THE DESIGN CHOICES </h1><hr>
+    <h1> RUNNING THROUGH THE DESIGN CHOICES </h1>
 
     <div class="user_flow">
       <p><strong>Information Architecture:</strong> After getting a better insight of my users, I could move foward on user stories and user flows.
@@ -197,7 +197,7 @@
 
 <section class="usability">
   <div class="usability_container">
-    <h1>USABILITY TESTING </h1> <hr>
+    <h1>USABILITY TESTING </h1>
     <p> After multiple iterations from the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
       I presented the application to four different testers.  <b>These are three separate tasks I had users complete:</b> </p>
 
@@ -248,7 +248,7 @@
 
 <section class="visual">
   <div class="visual_container">
-    <h1>VISUAL DESIGN</h1> <hr>
+    <h1>VISUAL DESIGN</h1> 
     <img src="images/gymseeker/visual.png">
   </div>
 
