--- a/ridestarter.html
+++ b/ridestarter.html
@@ -99,7 +99,7 @@
 
 <section class="research">
   <div class="research_container">
-    <h1> RESEARCHING THE CHALLENGES  </h1><hr>
+    <h1> RESEARCHING THE CHALLENGES  </h1>
 
     <div class="survey_findings">
       <p><strong>Survey Findings:</strong> At this initial stage, it was important to gain a better understanding of users' behavior of
@@ -169,7 +169,7 @@
 
   <section class="design_choices">
     <div class="design_container">
-      <h1> RIDING THROUGH THE DESIGN CHOICES </h1><hr>
+      <h1> RIDING THROUGH THE DESIGN CHOICES </h1>
 
       <div class="user_flow">
         <p><strong>User Flow:</strong> Based on the user research, I finalized four user stories that I believe
@@ -208,7 +208,7 @@
 
 <section class="implementation">
   <div class="implement_container">
-    <h1> GEARING THE DESIGN IMPLEMENTATION </span> <hr>
+    <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing">
       <p> <strong>Usability Testing:</strong> User testing was important to gather either design feedback or any errors that user experienced.
         For this process, I conducted both a contextual interview on four different users and an unmoderately usability testing on usertesting.com
@@ -223,7 +223,6 @@
     </div>
 
     <div class="highlights">
-      <h1> Insights gained from usability testing</h1>
       <ul>
         <li> For the first set of user testings, I reached out to some of my colleagues
           and and had them review my design in-person. Some of the feedback I recieved varied from things such as adjusting sizes
