--- a/simplebox.html
+++ b/simplebox.html
@@ -80,7 +80,7 @@
 </section>
 
 <section class="summary_deliver">
-  <h4 class="deliver">Duration<hr>
+  <h4 class="deliver">Duration <hr>
     <p>2 Months </p>
   </h4>
 
@@ -119,7 +119,7 @@
 
 <section class="research">
   <div class="research_container">
-    <h1>  UX RESEARCH  </h1><hr>
+    <h1>  UX RESEARCH  </h1>
     <p> User surveys and user stories were used to decide what features are necessary
       for simpleBox. To do that, I sent out a survey to find out what users were proactively
        using, their habits, and their competition in content and devices use.
@@ -155,7 +155,7 @@
 
   <section class="user_flow">
     <div class="user_flow_container">
-      <h1>INFORMATION ARCHITECTURE</h1> <hr>
+      <h1>INFORMATION ARCHITECTURE</h1>
       <p>From the research, I made a list of user stories to help me create user flows.
         In order to easily identify the steps taken to the end-process, I focus on the different user experience for both new and returning
         users, with several similarities. This process helped me craft and prioritize the minimum viable
@@ -169,7 +169,7 @@
 
 
 <section class="branding">
-  <h1>BRANDING AND TYPOGRAPHY </h1> <hr>
+  <h1>BRANDING AND TYPOGRAPHY </h1>
   <p> The next step in building the application is deciding on the brand and typography.
     The main goal of this web app is to provide a collection of notes, images, and links
     where users can store and share. Therefore, I wanted the brand and typography to
@@ -178,14 +178,14 @@
 </section>
 
 <section class="lofi">
-  <h1>LOW/MEDIUM-FIDELITY WIREFRAMES</h1> <hr>
+  <h1>LOW/MEDIUM-FIDELITY WIREFRAMES</h1>
   <p> Using the user flow as a guide, I created low-fidelity and medium-fidelity wireframes with Balsamiq and Sketch, respectively. These are some of the intial sketches: </p>
     <img src="images/simplebox/simplebox_low.png">
 </section>
 
 
 <section class="user_testing">
-  <h1>USABILITY TESTING </h1><hr>
+  <h1>USABILITY TESTING </h1>
   <p>To evaluate the product's user experience and identify flaws, I conducted usability testings on usertesting.com and
     in-person to see whether the product was user friendly to users. These are
     the main questions that I asked. </p>
@@ -200,7 +200,6 @@
   </div>
 
   <div class="highlights">
-    <h1>Insights from usability testing </h1>
     <ul>
       <li> <b>In-Person Testing:</b> Users had a positive response to the application and were able to navigate through
         the site smoothly. They also liked the simplicity of the site and the logo.  </li>
@@ -220,7 +219,7 @@
 </section>
 
 <section class="high_fidelity">
-  <h1> HIGH-FIDELITY PROTOTYPES </h1><hr>
+  <h1> HIGH-FIDELITY PROTOTYPES </h1>
   <p>After going through user testing for the low/medium prototypes and making iteration based on feedback, I used
     Sketch to create high-fidelity prototypes. Then I made another clickable prototypes with InVision and asked a few more users to
     navigate through the prototypes and provide feedback. I conducted another unmoderated user test. <a href="http://www.usertesting.com/v/f0ad361e-6fcd-4a05-8e1c-5c977715689e?encrypted_video_handle=tHdsGv9x0MymeSOqYu_RvQ&shared=M2VgP9nf">
@@ -257,7 +256,7 @@
 </section>
 
 <section class="html">
-  <h1> <b>Front-End Development</b> </h1> <hr>
+  <h1> Front-End Development </h1>
   <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
     Because Simplebox is targeted for users to access through different devices, I designed the
     homepage as mobile-first to ensure its responsiveness across different outlets. <a href="https://ekkalux.github.io/simpleBox/" target="_blank"> You can view the homepage development here </a> </p>
@@ -267,7 +266,7 @@
 </section>
 
 <section class="visual">
-  <h1> VISUAL DESIGN </h1><hr>
+  <h1> VISUAL DESIGN </h1>
 
     <img src="images/simplebox/dashboard_annotating.png">
     <img src="images/simplebox/annotating_account.png">
