--- a/gym.html
+++ b/gym.html
@@ -61,7 +61,7 @@
 
 
   <section class="summary">
-    <div class="summary_container">
+    <div id="summary_container">
       <h1> <span class="underline_black">SUMMARY</span> </h1>
       <p> Today, defining and maintaining fitness is open to interpretation. Whether that be health, sports, or recreational
       activities. Gymseeker seeks to assist users in finding the perfect gym to achieving their desired fitness goal.</p>
@@ -104,7 +104,7 @@
   </section>
 
   <section class="research">
-    <div class="research_container">
+    <div class="container">
       <h1> WORKING OUT ON THE RESEARCH </h1>
 
       <div class="survey_findings">
@@ -158,7 +158,7 @@
   </section>
 
 <section class="design_choices">
-  <div class="design_container">
+  <div class="container">
     <h1> RUNNING THROUGH THE DESIGN CHOICES </h1>
 
     <div class="user_flow">
@@ -196,7 +196,7 @@
 </section>
 
 <section class="usability">
-  <div class="usability_container">
+  <div id="usability_container">
     <h1>USABILITY TESTING </h1>
     <p> After multiple iterations from the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
       I presented the application to four different testers.  <b>These are three separate tasks I had users complete:</b> </p>
@@ -247,8 +247,8 @@
 </section>
 
 <section class="visual">
-  <div class="visual_container">
-    <h1>VISUAL DESIGN</h1> 
+  <div id="visual_container">
+    <h1>VISUAL DESIGN</h1>
     <img src="images/gymseeker/visual.png">
   </div>
 
@@ -260,7 +260,7 @@
 
 <section class="final">
   <div class="conclusion">
-    <div class="conclusion_container">
+    <div id="conclusion_container">
     <h1><span class="underline_black"> CONCLUSION</span></h1>
     <p> Gymseeker is a project that I am particularly passionate about.
       As a fitness enthusiast who frequent the weight room, I have only considered
