--- a/simplebox.html
+++ b/simplebox.html
@@ -71,7 +71,7 @@
 <!-- SUMMARY SUMMARY SUMMARY -->
 
 <section class="summary">
-  <div class="summary_container">
+  <div id="summary_container">
     <h1><span class="underline_black"> SUMMARY </span> </h1>
     <p> simpleBox is a SaaS web application which allows users to collect information and store it in a
       single place. Users can create documents, store images, links to websites, and
@@ -118,7 +118,7 @@
 
 
 <section class="research">
-  <div class="research_container">
+  <div class="container">
     <h1>  UX RESEARCH  </h1>
     <p> User surveys and user stories were used to decide what features are necessary
       for simpleBox. To do that, I sent out a survey to find out what users were proactively
@@ -154,7 +154,7 @@
 
 
   <section class="user_flow">
-    <div class="user_flow_container">
+    <div class="container">
       <h1>INFORMATION ARCHITECTURE</h1>
       <p>From the research, I made a list of user stories to help me create user flows.
         In order to easily identify the steps taken to the end-process, I focus on the different user experience for both new and returning
@@ -169,22 +169,27 @@
 
 
 <section class="branding">
+  <div class="container">
   <h1>BRANDING AND TYPOGRAPHY </h1>
   <p> The next step in building the application is deciding on the brand and typography.
     The main goal of this web app is to provide a collection of notes, images, and links
     where users can store and share. Therefore, I wanted the brand and typography to
     reflect on the scheme of both professional and casual usage. </p>
   <img src="images/simplebox/simplebox_style_guide.png">
+  </div>
 </section>
 
 <section class="lofi">
-  <h1>LOW/MEDIUM-FIDELITY WIREFRAMES</h1>
-  <p> Using the user flow as a guide, I created low-fidelity and medium-fidelity wireframes with Balsamiq and Sketch, respectively. These are some of the intial sketches: </p>
+  <div class="container">
+    <h1>LOW/MEDIUM-FIDELITY WIREFRAMES</h1>
+    <p> Using the user flow as a guide, I created low-fidelity and medium-fidelity wireframes with Balsamiq and Sketch, respectively. These are some of the intial sketches: </p>
     <img src="images/simplebox/simplebox_low.png">
+  </div>
 </section>
 
 
 <section class="user_testing">
+  <div class="container">
   <h1>USABILITY TESTING </h1>
   <p>To evaluate the product's user experience and identify flaws, I conducted usability testings on usertesting.com and
     in-person to see whether the product was user friendly to users. These are
@@ -212,13 +217,14 @@
     </ul>
   </div>
 
-
   <img src="images/simplebox/user_testing_video.png">
 
+</div>
 
 </section>
 
 <section class="high_fidelity">
+  <div class="container">
   <h1> HIGH-FIDELITY PROTOTYPES </h1>
   <p>After going through user testing for the low/medium prototypes and making iteration based on feedback, I used
     Sketch to create high-fidelity prototypes. Then I made another clickable prototypes with InVision and asked a few more users to
@@ -253,16 +259,18 @@
   </div>
 
   <img src="images/simplebox/preference_test.png">
+  </div>
 </section>
 
 <section class="html">
-  <h1> Front-End Development </h1>
-  <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
+  <div class="container">
+    <h1> Front-End Development </h1>
+    <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
     Because Simplebox is targeted for users to access through different devices, I designed the
     homepage as mobile-first to ensure its responsiveness across different outlets. <a href="https://ekkalux.github.io/simpleBox/" target="_blank"> You can view the homepage development here </a> </p>
 
-  <img src="images/simplebox/code.png">
-
+    <img src="images/simplebox/code.png">
+  </div>
 </section>
 
 <section class="visual">
@@ -274,8 +282,7 @@
 
 
 <section class="final">
-  <div class="conclusion">
-    <div class="conclusion_container">
+    <div id="conclusion_container">
     <h1><span class="underline_black"> CONCLUSION</span></h1>
     <p> After researching, user testing, and designing through Balsamiq, Illustrator, and
       Photoshop/Sketch, the final product was completed with harmoniously-working colors and
@@ -294,8 +301,7 @@
       <i class="fa fa-angle-double-up fa-4x" style="color:black"></i>
       <h1> Back to top </h1>
     </div>
-
-  </div>
+</section>
 
   <section class="contact">
     <h1> CONTACT </h1> <hr class="contact_hr">
