--- a/ridestarter.html
+++ b/ridestarter.html
@@ -98,7 +98,7 @@
 </section>
 
 <section class="research">
-  <div class="research_container">
+  <div class="container">
     <h1> RESEARCHING THE CHALLENGES  </h1>
 
     <div class="survey_findings">
@@ -168,7 +168,7 @@
 </section>
 
   <section class="design_choices">
-    <div class="design_container">
+    <div class="container">
       <h1> RIDING THROUGH THE DESIGN CHOICES </h1>
 
       <div class="user_flow">
@@ -207,7 +207,7 @@
   </section>
 
 <section class="implementation">
-  <div class="implement_container">
+  <div class="container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing">
       <p> <strong>Usability Testing:</strong> User testing was important to gather either design feedback or any errors that user experienced.
@@ -269,8 +269,8 @@
 
 <section class="final">
   <div class="conclusion">
-    <div class="conclusion_container">
-    <h1><span class="underline_black"> CONCLUSION</span></h1>
+    <div id="conclusion_container">
+    <h1>CONCLUSION</h1>
     <p>Ridestarter has a value in allowing users to exclusively search and donate to charity bike rides,
       solving the problem of transparency in crowd-sourcing charity projects. Building an application with the goal to get people to not only get excited
       to donate money, but also build trust and transparency in the platform requires thoughtful decisions in the design process.
